--- a/src/Styles.module.scss
+++ b/src/Styles.module.scss
@@ -158,3 +158,196 @@
     cursor: pointer;
   }
 }
+
+.button{
+  &:active{
+      position:relative;
+      top:1px;
+      background-color: #0032c6;
+  }
+  border-radius:.5em;
+box-shadow:0 1px 2px rgba(0,0,0,.2);
+cursor:pointer;
+display:inline-block;
+font:14px/100% Arial,Helvetica,sans-serif;
+margin:2em;
+outline:none;
+padding:.5em 2em .55em;
+text-align:center;
+text-shadow:0 1px 1px rgba(0,0,0,.3);
+  text-decoration:none;
+  background-color: #0072c6;
+  color:#fff;
+  font-weight: 800;
+  user-select: none;
+  position: relative;
+
+  .lamp{
+      width: 0.5em;
+      height: 0.5em;
+      border-radius: 0.5em;
+      display: block;
+      position: absolute;
+      top:0.75em;
+      right: 0.75em;
+  }
+}
+
+.maindialogBackground{
+  position: absolute;
+  background: rgba(200, 200, 200, 0.5);
+  top:0;
+  left: 0;
+  display: block;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100;
+  padding: 1em;
+  .dialog{
+    width: calc(100vw - 9em);
+    height: calc(100vh - 12em);
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    top: 6em;
+    left: 2em;
+    padding: 2em;
+    border-radius: 2em;
+    overflow: auto;
+    display: flex;
+    flex-wrap: wrap;
+    min-width: 20em;
+    min-height: 20em;
+    justify-content: center;
+    .closeIcon{
+      width: 1.25em;
+      height: 1.25em;
+      position: absolute;
+      top:1.25em;
+      right: 1.25em;
+      cursor: pointer;
+      svg{
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .searchLine{
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      height: 3.75rem;
+      padding: .5rem;
+      border-bottom: #0032c6 solid 1px;
+      flex-wrap: wrap;
+      input{
+        width: calc(100% - 8rem);
+      }
+      .button{
+        margin:.5rem;
+        height: 1rem;
+        margin-top: unset;
+      }
+      h1{
+        display: block;
+        width: 100%;
+        font-size: 1.5em;
+        text-align: center;
+      }
+    }
+    .mainPallete{
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      flex-direction: column;
+      height: calc(100% - 4.8rem);
+      overflow: auto;
+      .workPanel{
+        display: flex;
+        flex-wrap: wrap;
+        width: 69%;
+        min-width: 20em;
+        height: 100%;
+        align-content: baseline;
+        .step{
+          display: flex;
+          flex-wrap: wrap;
+          
+          label[aria-required]{
+            position: relative;
+            padding-right: 0.75em;
+            &::after{
+              position: absolute;
+              right: 0.05em;
+              content: '*';
+              color: darkred;
+              top: 0;
+            }
+          }
+        }
+      }
+      .oftenUsedPanel{
+        display: flex;
+        flex-wrap: wrap;
+        width: 30%;
+        min-width: 10rem;
+        justify-content: center;
+        border-left: #0032c6 solid 1px;
+        height: 100%;
+        align-content: baseline;
+        position: sticky;
+        top:0;
+      }
+    }
+    .branch{
+      display: block;
+      width: 100%;
+      padding: .75em;
+      padding-left: 2em;
+      .button{
+        margin: 0.5em;
+      }
+      .queueButton{
+        background-color: #e1ecf4;
+        border-radius: 3px;
+        border: 1px solid #7aa7c7;
+        box-shadow: rgba(255, 255, 255, .7) 0 1px 0 0 inset;
+        box-sizing: border-box;
+        color: #39739d;
+        cursor: pointer;
+        display: inline-block;
+        font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
+        font-size: 13px;
+        font-weight: 400;
+        line-height: 1.15385;
+        margin: 0;
+        outline: none;
+        padding: 8px .8em;
+        position: relative;
+        text-align: center;
+        text-decoration: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        vertical-align: baseline;
+        display: block;
+        margin-left: 2em;
+        width: fit-content;
+        &:hover{
+          background-color: #b3d3ea;
+          color: #2c5777;
+        }
+        &:focus{
+          background-color: #b3d3ea;
+          color: #2c5777;
+          box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
+        }
+        &:active {
+          background-color: #a0c7e4;
+          box-shadow: none;
+          color: #2c5777;
+        }
+      }
+    }
+    
+  }
+}
